<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.anadon</groupId>
  <artifactId>jls</artifactId>
  <version>4.2.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>JLS - Java Logic Simulator</name>
  <description>An educational digital logic circuit editor and simulator,
    originally by David A. Poplawski (Michigan Technological University).</description>
  <url>https://github.com/anadon/JLS</url>

  <licenses>
    <license>
      <name>GNU General Public License v3.0</name>
      <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

  <dependencies>
    <!-- replaces the vendored sources in xz/ (kept in-tree until #6 removes them;
         they are not part of this build) -->
    <dependency>
      <groupId>org.tukaani</groupId>
      <artifactId>xz</artifactId>
      <version>1.10</version>
    </dependency>
    <!-- replaces the checked-in lib/jhall.jar -->
    <dependency>
      <groupId>javax.help</groupId>
      <artifactId>javahelp</artifactId>
      <version>2.0.05</version>
    </dependency>
  </dependencies>

  <build>
    <!-- historical layout: sources in src/, not src/main/java -->
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <!-- images and other non-Java files that live inside the source tree -->
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
          <exclude>**/CVS/**</exclude>
        </excludes>
      </resource>
      <!-- JavaHelp helpset -->
      <resource>
        <directory>resources</directory>
        <excludes>
          <exclude>**/CVS/**</exclude>
        </excludes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <compilerArgs>
            <arg>-Xlint:deprecation,removal,unchecked</arg>
            <arg>-Werror</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>jls.JLS</mainClass>
              <addClasspath>true</addClasspath>
              <classpathPrefix>lib/</classpathPrefix>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.8.6.4</version>
        <configuration>
          <effort>Max</effort>
          <!-- fail the build only on the highest-confidence findings;
               the full backlog is tracked via the exclude baseline -->
          <threshold>High</threshold>
          <excludeFilterFile>config/spotbugs-exclude.xml</excludeFilterFile>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
